# r-type

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  compile_flags.txt  flake.nix
.github/workflows/: build.yml  release.yml
Editor/: CMakeLists.txt
Editor/src/: main.cpp
Engine/: CMakeLists.txt
Engine/Core/: CMakeLists.txt
Engine/Core/include/Rte/: BasicComponents.hpp  Common.hpp  IModule.hpp  Logger.hpp  ModuleManager.hpp
Engine/Core/include/Rte/Ecs/: ComponentArray.hpp  ComponentManager.hpp  Coordinator.hpp  Ecs.hpp  EntityManager.hpp  Event.hpp  EventManager.hpp  SystemManager.hpp  Types.hpp
Engine/Core/include/Rte/Ecs/Private/: ComponentArray.hpp  ComponentManager.hpp  EntityManager.hpp  EventManager.hpp  SystemManager.hpp
Engine/Core/src/: EntityManager.cpp  EventManager.cpp  Logger.cpp  ModuleManager.cpp
Engine/Libs/Core/: CMakeLists.txt
Engine/Libs/Graphic/: CMakeLists.txt
Engine/Libs/Graphic/include/Rte/Graphic/: Graphic.hpp
Engine/Libs/Graphic/src/: Graphic.cpp
Engine/Modules/Audio/: CMakeLists.txt
Engine/Modules/Audio/include/Rte/Audio/: AudioModule.hpp  Sound.hpp  SoundBuffer.hpp
Engine/Modules/Audio/src/: AudioModuleImpl.cpp  AudioModuleImpl.hpp  SoundBufferImpl.cpp  SoundBufferImpl.hpp  SoundImpl.cpp  SoundImpl.hpp
Engine/Modules/Graphic/: CMakeLists.txt
Engine/Modules/Graphic/include/: GraphicModule.hpp  Window.hpp
Engine/Modules/Graphic/include/Rte/Graphic/: Components.hpp  GraphicModule.hpp  Texture.hpp
Engine/Modules/Graphic/src/: ButtonSystem.cpp  ButtonSystem.hpp  GraphicModule.cpp  GraphicModuleImpl.cpp  GraphicModuleImpl.hpp  RenderSystem.cpp  RenderSystem.hpp  TextSystem.cpp  TextSystem.hpp  TextureImpl.cpp  TextureImpl.hpp  Types.hpp  WindowImpl.cpp  WindowImpl.hpp
Engine/Modules/Network/: CMakeLists.txt  ListOfUdpFunc.txt
Engine/Modules/Network/include/Rte/Network/: NetworkModule.hpp  NetworkModuleClient.hpp  NetworkModuleServer.hpp  NetworkModuleTypes.hpp
Engine/Modules/Network/src/: NetworkClientModuleAsio.cpp  NetworkClientModuleAsio.hpp  NetworkModuleAsio.cpp  NetworkModuleAsio.hpp  NetworkModuleGeneral.cpp  NetworkModuleGeneral.hpp  NetworkModuleImpl.hpp  NetworkServerModuleAsio.cpp  NetworkServerModuleAsio.hpp  machin.hpp
Engine/Modules/Network/src/BetterNetworkLibrary/: BetterNetworkLibrary.hpp  NetworkClient.hpp  NetworkCommon.hpp  NetworkConnection.hpp  NetworkMessage.hpp  NetworkQueue.hpp  NetworkServer.hpp  UdpConnector.hpp
Engine/Modules/Physics/: CMakeLists.txt
Engine/Modules/Physics/include/Rte/Physics/: Components.hpp  Materials.hpp  PhysicsModule.hpp  PlayerBody.hpp  RigidBody.hpp  SandBox.hpp  Sensor.hpp  ShapeBody.hpp  Tool.hpp
Engine/Modules/Physics/src/: PhysicsModuleImpl.cpp  PhysicsModuleImpl.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  PlayerBodyImpl.cpp  PlayerBodyImpl.hpp  RigidBodyImpl.cpp  RigidBodyImpl.hpp  SandBoxImpl.cpp  SandBoxImpl.hpp  SensorImpl.cpp  SensorImpl.hpp  ShapeBodyImpl.cpp  ShapeBodyImpl.hpp
Engine/Modules/Scripting/: CMakeLists.txt
Engine/Modules/Scripting/include/Rte/Scripting/: Components.hpp  ScriptingModule.hpp
Engine/Modules/Scripting/src/: ScriptingModuleImpl.cpp  ScriptingModuleImpl.hpp
Engine/include/: Window.hpp  test.hpp
Engine/include/Ecs/: ComponentArray.hpp  ComponentManager.hpp  Coordinator.hpp  EntityManager.hpp  Event.hpp  EventManager.hpp  System.hpp  SystemManager.hpp  Types.hpp
Engine/src/: WindowImpl.cpp  WindowImpl.hpp  test.cpp
Example/: CMakeLists.txt
Example/include/: App.hpp
Example/src/: App.cpp  main.cpp
FlappyBird/: CMakeLists.txt
FlappyBird/include/: FlappyBird.hpp
FlappyBird/src/: Button.cpp  EndScreen.cpp  FlappyBird.cpp  GameLoop.cpp  PauseScreen.cpp  StartScreen.cpp  Utils.cpp  main.cpp
R-Type/: CMakeLists.txt
R-Type-client/: CMakeLists.txt
R-Type-client/include/: Button.hpp  ClientApp.hpp  Enemy.hpp  Player.hpp
R-Type-client/src/: Button.cpp  ClientApp.cpp  Gameplay.cpp  Menu.cpp  main.cpp
R-Type-client/src/gameplay/: Enemy.cpp  Gameplay.cpp  Player.cpp
R-Type-demo/: CMakeLists.txt
R-Type-demo/include/: DemoApp.hpp
R-Type-demo/src/: DemoApp.cpp  main.cpp
R-Type-server/: CMakeLists.txt
R-Type-server/include/: Enemy.hpp  Player.hpp  ServerApp.hpp
R-Type-server/include/Utils/: BinaryMap.hpp
R-Type-server/src/: Enemy.cpp  InitScene.cpp  Player.cpp  SceneBeakables.cpp  SceneEnemies.cpp  SceneObstacle.cpp  SceneObstacles.cpp  ScenePlayers.cpp  ScenePowerUps.cpp  SceneProjectiles.cpp  SceneTerrain.cpp  ServerApp.cpp  UpdateScene.cpp  initScene.cpp  main.cpp
R-Type-server/src/Utils/: BinaryMap.cpp
R-Type/include/: App.hpp
R-Type/src/: App.cpp  main.cpp
